waffle.shにJRE追加